--- a/index.html
+++ b/index.html
@@ -19,34 +19,30 @@
                     <a class="nav-link" href="#groups">Groups</a>
                 </li>
                 <li>
-                    <a class="nav-link" href="#join">Join us</a>
+                    <a class="nav-link" href="#findOutMore">Join us</a>
                 </li>
             </ul>
         </nav>
     </header>
     <section id="hero">
-        <h3>Social relaxed jogs with lots of photo opportunities</h3>
-        <form id="form" action="#">
-            <input name="email" id="email" type="email" placeholder="Enter your email address" required/>
-            <input id="submit" type="submit" value="Get Started" class="btn"></input>
-        </form>
+        <h3>The best (and only!) running and photography group to be found in West London.</h3>
     </section>
     <div id="container">
         <section id="features">
             <div class="grid">
                 <div class="icon">
-                    <i class="fa fa-3x fa-camera-retro"></i>
+                    <i class="fa fa-w-16 fa-camera-retro"></i>
                 </div>
                 <div class="desc">
                     <h2>Photos </h2>
-                    <p>We stop and take photos at planned stops during our run ... but also take spontaneous snaps when the
+                    <p>We stop and take photos at planned stops during our run ... but also go for spontaneous snaps when the
                         moment presents!
                     </p>
                 </div>
             </div>
             <div class="grid">
                 <div class="icon">
-                    <i class="fa fa-3x fa-tree"></i>
+                    <i class="fa fa-w-16 fa-tree"></i>
                 </div>
                 <div class="desc">
                     <h2>Nature</h2>
@@ -58,7 +54,7 @@
 
             <div class="grid">
                 <div class="icon">
-                    <i class="fa fa-3x fa-road"></i>
+                    <i class="fa fa-w-16 fa-road"></i>
                 </div>
                 <div class="desc">
                     <h2>Running</h2>
@@ -113,6 +109,13 @@
                 <button class="btn">Select</button>
             </div>
 
+        </section>
+        <section id="findOutMore">
+            <h3>Join our mailing list :</h3>
+            <form id="form" action="#">
+                <input name="email" id="email" type="email" placeholder="Enter your email address" required/>
+                <input id="submit" type="submit" value="Get Started" class="btn"></input>
+            </form>
         </section>
     </div>
 </body>
